Add interfaces for module supporting